# stockKlemsanFlask

./: .env.example  README.md  app.py  forms.py  pyproject.toml  requirements.txt  settings.py  utils.py
klemsan_app/: __init__.py  error_handlers.py  models.py  utils.py  views.py
klemsan_app/templates/: download.html  klemsan.html
klemsan_app/templates/includes/: base.html  footer.html
templates/: 404.html  klemsan.html
templates/includes/: header.html
